--- a/app/src/main/res/layout/list_item_evento_ativo.xml
+++ b/app/src/main/res/layout/list_item_evento_ativo.xml
@@ -16,7 +16,8 @@
         android:padding="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:background="?android:attr/selectableItemBackground">
+        android:background="?android:attr/selectableItemBackground"
+        android:animateLayoutChanges="true">
 
         <RelativeLayout
             android:id="@+id/visible_part"
